@@ -120,11 +120,9 @@ Horde::startBuffer();
 $form->renderActive(new Horde_Form_Renderer(array('encode_title' => false)), $vars, Horde::url('vacation.php'), 'post');
 $form_output = Horde::endBuffer();
 
-$menu = Ingo::menu();
 $page_output->header(array(
     'title' => _("Vacation Edit")
 ));
-echo $menu;
 Ingo::status();
 echo $form_output;
 $page_output->footer();
