@@ -2,6 +2,7 @@
 v3.1.0-git
 ----------
 
+[jan] Move shared ruleset selection to sidebar.
 [mms] All Ingo templates now use Horde_View.
 
 
